--- a/index.html
+++ b/index.html
@@ -45,12 +45,9 @@
                                 <tr>
                                     <td>
                                         <!-- Aqui é o campo de selecionar as opções -->
-                                        <select class="input" name="predio">
-                                            <option>Prédio 1</option>
-                                            <option>Prédio 2</option>
-                                            <option>Prédio 3</option>
-                                            <option>Prédio 4</option>
-                                            <option>Prédio 5</option>
+                                        <select class="input" name="predio" id="predio" onchange="salvarPredio()">
+                                            <option></option>
+                                            <option>Add predio</option>
                                         </select>
                                     </td>
                                     <!-- Aqui é o campo de inserir o local do trabalh (campo 2) -->
@@ -60,27 +57,9 @@
                                 </tr>
                             </table>
                             <table id="locaisDeTrabalho" class="dados">
-                                <tr>
                                     <th style="width:180px">Prédio</th>
                                     <th style="width:200px">Local</th>
                                     <th style="width:30px"></th>
-                                </tr>
-                                <tr>
-                                    <td>teste</td>
-                                    <td>teste</td>
-                                    <td>
-                                        <button type="button" class="btn-item" onclick="localTrabalho(predio.value, local.value)">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
-                                                <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"></path>
-                                            </svg>
-                                        </button>
-                                        <button type="button" class="btn-item" onclick="localTrabalho(predio.value, local.value)">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
-                                                <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
-                                            </svg>
-                                        </button>
-                                    </td>
-                                </tr>
                             </table>
                         </form>
                     <canvas></canvas>
